--- a/index.html
+++ b/index.html
@@ -4,17 +4,32 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="./lib/scss/reset.css">
   <meta name=viewport content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <title>poopodoro</title>
 </head>
 <body>
   <section>
-    <h1>poopadoro</h1>
-    <article class="timer-js timer">time remaining:</article>
-    <button class="start-button-js start-button">start</button>
-    <button class="options-button-js options-button">options</button>
-    <button class="pause-button-js pause-button">pause</button>
-    <button class="resume-button-js resume-button">resume</button>
-    <button class="reset-button-js reset-button">reset</button>
+    <h1>header/dropdown for desktop/mobile</h1>
+    <header>
+      <img src='lib/images/generic-icon.svg' alt="your logo">
+      <nav>
+        <ul>
+          <button class='dropdown-button'><img src="lib/images/list.svg" alt="dropdown"></button>
+          <li class='dropdown-content'><a href="">link1</a></li>
+          <li class='dropdown-content'><a href="">link2</a></li>
+          <li class='dropdown-content'><a href="">link3</a></li>
+          <li class='dropdown-content'><a href="">link4</a></li>
+        </ul>
+      </nav>
+      <section class='user-login-signup'>
+        <a href="" alt='sign-up'>Sign-Up</a>
+        <a href="" alt='log-in' class='login'>Log-In</a>
+      </section>
+    </header>
+    <section class>
+      <p data-height="265" data-theme-id="dark" data-slug-hash="oLAqQg" data-default-tab="html,result" data-user="kerrd" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/kerrd/pen/oLAqQg/">oLAqQg</a> by David Kerr (<a href="http://codepen.io/kerrd">@kerrd</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+      <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+    </section>
   </section>
 
   <script src="main.bundle.js"></script>
